--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <style>
       body {
-        padding: 200px;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        margin: 0;
+        padding: 0;
       }
     </style>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
